--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "netlify deploy --prod" 
+    "test": "echo \"Error: no test specified\" && exit 1" 
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +15,6 @@
     "date-and-time": "^3.4.1",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "googleapis": "^140.0.1",
-    "netlify-cli": "^17.34.0",
-    "netlify-lambda": "^2.0.16",
-    "serverless-http": "^3.2.0"
+    "googleapis": "^140.0.1"
   }
 }
